Fixed Phaser 3 game to be displayed behind web application.

--- a/client/src/pages/AccountPage/AccountPage.css
+++ b/client/src/pages/AccountPage/AccountPage.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0);
+    position: absolute;
 }
   
 .FormContainer {
