--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -4,10 +4,12 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
     padding: 20px;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: absolute;
 }
   
 .Header {
